# maf-yaml-outputschema-validation-repro

./: .env.example  README.md  main_azure_openai_yaml.py  main_foundry_yaml.py  main_yaml_file.py  pyproject.toml
yaml/: AzureFoundryResponses.yaml  AzureOpenAIResponses.yaml
